test/visibility/rename/badOldName.good
badOldName.chpl:8: error: Bad identifier in 'only' clause, no known 'br'
